--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 *.userosscache
 *.sln.docstates
 
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
